Fix wrong width of text header

--- a/components/02-molecules/header/text-header/_text-header.scss
+++ b/components/02-molecules/header/text-header/_text-header.scss
@@ -39,9 +39,3 @@
     font-size: $text-header-intro-font-size;
   }
 }
-
-@media screen and (min-width: $grid-breakpoint-lg) {
-  .text-header__body {
-    max-width: 70%;
-  }
-}
